# calign

./: CMakeLists.txt  Makefile  calignrun.py  setup.py
src/: calign.c  calign.h  ext_calign.c  ext_swalign.c  swalign.c  swalign.h
